Feat: adjusts input type to number

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <form class="search-form">
-    <input type="text" class="search" placeholder="Enter Member Id">
+    <input type="number" class="search" placeholder="Enter Member Id">
   </form>
 <script>
 </script>
